--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: x64
+      - run: ls ext
+      - run: ls ext/raudio
+      - run: ls ext/raudio/src
       - name: Build native extension (POSIX/MSVC)
         run: make -C ext
         env:
