Update CI configuration and examples for improved build and playback performance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,17 +24,15 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: x64
-      - name: Build native extension (POSIX/MSVC)
+      - name: Build native extension (MSVC)
         if: matrix.os == 'windows'
-        run: make -C ext
+        run: make -C ext CC=cl
         env:
-          CC: "cl"
           MSYS_NO_PATHCONV: "1"
           MSYS2_ARG_CONV_EXCL: "*"
       - name: Build native extension (POSIX)
         if: matrix.os != 'windows'
         run: make -C ext
-      - run: ls ext
       - name: Run specs
         run: crystal spec --error-trace
   build_MinGW64:
