--- a/ext/Makefile
+++ b/ext/Makefile
@@ -15,14 +15,14 @@ ifeq ($(OS),Windows_NT)
 		EXT_LIB = raudio.lib
 		OBJ = raudio.obj
 		SRC = raudio/src/raudio.c
-		CFLAGS = /nologo /c /Iraudio/src /DRAUDIO_STANDALONE /DSUPPORT_FILEFORMAT_WAV /DSUPPORT_FILEFORMAT_OGG /Fo$(OBJ)
+		CFLAGS = /nologo /c /Iraudio/src /DRAUDIO_STANDALONE /DSUPPORT_MODULE_RAUDIO /DSUPPORT_FILEFORMAT_WAV /DSUPPORT_FILEFORMAT_OGG /DSUPPORT_FILEFORMAT_MP3 /DSUPPORT_FILEFORMAT_FLAC /DSUPPORT_FILEFORMAT_QOA /Fo$(OBJ)
 		OUTFLAG =
 		LIB_CMD = lib /OUT:raudio.lib raudio.obj
 	else
 		EXT_LIB = libraudio.a
 		OBJ = raudio.o
 		SRC = raudio/src/raudio.c
-		CFLAGS = -c -Iraudio/src -DRAUDIO_STANDALONE -DSUPPORT_FILEFORMAT_WAV -DSUPPORT_FILEFORMAT_OGG
+		CFLAGS = -c -Iraudio/src -DRAUDIO_STANDALONE -DSUPPORT_MODULE_RAUDIO -DSUPPORT_FILEFORMAT_WAV -DSUPPORT_FILEFORMAT_OGG -DSUPPORT_FILEFORMAT_MP3 -DSUPPORT_FILEFORMAT_FLAC -DSUPPORT_FILEFORMAT_QOA
 		OUTFLAG = -o $(OBJ)
 		AR_CMD = ar rcs libraudio.a raudio.o
 	endif
@@ -30,7 +30,7 @@ else
 	EXT_LIB = libraudio.a
 	OBJ = raudio.o
 	SRC = raudio/src/raudio.c
-	CFLAGS = -c -Iraudio/src -DRAUDIO_STANDALONE -DSUPPORT_FILEFORMAT_WAV -DSUPPORT_FILEFORMAT_OGG
+	CFLAGS = -c -Iraudio/src -DRAUDIO_STANDALONE -DSUPPORT_MODULE_RAUDIO -DSUPPORT_FILEFORMAT_WAV -DSUPPORT_FILEFORMAT_OGG -DSUPPORT_FILEFORMAT_MP3 -DSUPPORT_FILEFORMAT_FLAC -DSUPPORT_FILEFORMAT_QOA
 	OUTFLAG = -o $(OBJ)
 	AR_CMD = ar rcs libraudio.a raudio.o
 endif
