Makefile: Refactor build flags and improve compatibility for different compilers

--- a/ext/Makefile
+++ b/ext/Makefile
@@ -1,4 +1,12 @@
 CC ?= gcc
+AR ?= ar
+RANLIB ?= ranlib
+
+# Common flags
+CPPFLAGS ?=
+CFLAGS   ?=
+EXTRA_CPPFLAGS ?=
+EXTRA_CFLAGS   ?=
 
 # MSVC -> cl
 # MinGW -> gcc
@@ -15,7 +23,7 @@ ifeq ($(OS),Windows_NT)
 		EXT_LIB = raudio.lib
 		OBJ = raudio.obj
 		SRC = raudio/src/raudio.c
-		CFLAGS = /nologo /c /O2 \
+		CPPFLAGS += \
 			/Iraudio/src \
 			/DRAUDIO_STANDALONE \
 			/DSUPPORT_MODULE_RAUDIO \
@@ -25,15 +33,17 @@ ifeq ($(OS),Windows_NT)
 			/DSUPPORT_FILEFORMAT_FLAC \
 			/DSUPPORT_FILEFORMAT_QOA \
 			/DSUPPORT_FILEFORMAT_XM \
-			/DSUPPORT_FILEFORMAT_MOD \
-			/Fo$(OBJ)
+			/DSUPPORT_FILEFORMAT_MOD
+		CFLAGS   += /nologo /c /O2 /Fo$(OBJ)
+		CPPFLAGS += $(EXTRA_CPPFLAGS)
+		CFLAGS   += $(EXTRA_CFLAGS)
 		OUTFLAG =
 		LIB_CMD = lib /OUT:raudio.lib raudio.obj
 	else
 		EXT_LIB = libraudio.a
 		OBJ = raudio.o
 		SRC = raudio/src/raudio.c
-		CFLAGS = -c \
+		CPPFLAGS += \
 			-Iraudio/src \
 			-DRAUDIO_STANDALONE \
 			-DSUPPORT_MODULE_RAUDIO \
@@ -43,16 +53,18 @@ ifeq ($(OS),Windows_NT)
 			-DSUPPORT_FILEFORMAT_FLAC \
 			-DSUPPORT_FILEFORMAT_QOA \
 			-DSUPPORT_FILEFORMAT_XM \
-			-DSUPPORT_FILEFORMAT_MOD \
-			-O2 -fPIC
+			-DSUPPORT_FILEFORMAT_MOD
+		CFLAGS   += -c -O2 -fPIC
+		CPPFLAGS += $(EXTRA_CPPFLAGS)
+		CFLAGS   += $(EXTRA_CFLAGS)
 		OUTFLAG = -o $(OBJ)
-		AR_CMD = ar rcs libraudio.a raudio.o
+		AR_CMD = $(AR) rcs libraudio.a raudio.o
 	endif
 else
 	EXT_LIB = libraudio.a
 	OBJ = raudio.o
 	SRC = raudio/src/raudio.c
-	CFLAGS = -c \
+	CPPFLAGS += \
 		-Iraudio/src \
 		-DRAUDIO_STANDALONE \
 		-DSUPPORT_MODULE_RAUDIO \
@@ -62,33 +74,48 @@ else
 		-DSUPPORT_FILEFORMAT_FLAC \
 		-DSUPPORT_FILEFORMAT_QOA \
 		-DSUPPORT_FILEFORMAT_XM \
-		-DSUPPORT_FILEFORMAT_MOD \
-		-O2 -fPIC
+		-DSUPPORT_FILEFORMAT_MOD
+	CFLAGS   += -c -O2 -fPIC
+	CPPFLAGS += $(EXTRA_CPPFLAGS)
+	CFLAGS   += $(EXTRA_CFLAGS)
 	OUTFLAG = -o $(OBJ)
-	AR_CMD = ar rcs libraudio.a raudio.o
+	AR_CMD = $(AR) rcs libraudio.a raudio.o
+
+	# --- auto-add multiarch include for glibc when available (helps non-system clang) ---
+	ifeq ($(filter cl,$(CC)),)  # skip for MSVC
+	MULTIARCH := $(shell gcc -print-multiarch 2>/dev/null)
+	ifneq ($(strip $(MULTIARCH)),)
+		CPPFLAGS += -isystem /usr/include/$(MULTIARCH)
+	endif
+	endif
 endif
 
 all: $(EXT_LIB)
 
 raudio.obj raudio.o: $(SRC)
-	$(CC) $(CFLAGS) $(SRC) $(OUTFLAG)
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(SRC) $(OUTFLAG)
+
 
 raudio.lib: raudio.obj
 	$(LIB_CMD)
 
 libraudio.a: raudio.o
 	$(AR_CMD)
+	-@$(RANLIB) libraudio.a >/dev/null 2>&1 || true
 
 clean:
-	rm -f raudio.o raudio.obj libraudio.a raudio.lib
+	$(RM) -f raudio.o raudio.obj libraudio.a raudio.lib
+
 
 # install/uninstall targets
 PREFIX ?= /usr/local
 DESTDIR ?=
 LIBDIR ?= $(PREFIX)/lib
 
-# Command used for installing files; kept simple for non-interactive postinstall
-INSTALL_CMD ?= mkdir -p $(DESTDIR)$(LIBDIR) && cp -f $(EXT_LIB) $(DESTDIR)$(LIBDIR)/$(EXT_LIB)
+# Command used for installing files
+INSTALL ?= install
+INSTALL_CMD ?= mkdir -p $(DESTDIR)$(LIBDIR) && \
+	$(INSTALL) -m 0644 $(EXT_LIB) $(DESTDIR)$(LIBDIR)/$(EXT_LIB)
 
 install: all
 	@$(INSTALL_CMD)
